tests/paczka1/fuzzy1/88781716.err
Error in line 8: RtZKKJHU7 A440 0,9
Error in line 12: 8AJOc A333 49,0
Error in line 17: 8AJOc S493 29,5
Error in line 13: A333 A2 40,5
